testing/Travis/testcases/prototype/shouldSucceed/try9.adl
CONTEXT Test IN ENGLISH

--PATTERN Test9
RELATION r[A*A]
RULE Test: r = r\/I
--ENDPATTERN

ENDCONTEXT

{- 
   Purpose: a superficial check whether type deduction works.
   Result: PASS
   Reason: This is not entirely trivial. Relation I takes its type from r,
           so the checker deduces that I[A] is meant.
-}