testing/Travis/testcases/prototype/fail/try22.adl
CONTEXT Test IN ENGLISH
r::A*B

INTERFACE BuggyInterface (r,t) : I[A]
  BOX [ "Me" : I
      ]
ENDCONTEXT

{-
   Purpose: This script is meant see that relations mentioned in the interface are defined.
   Result: FAIL
   Reason: relation t is not declared
   Error message:

   
-}